fix double scrollbar

--- a/src/index.scss
+++ b/src/index.scss
@@ -23,6 +23,7 @@ code {
 
 * {
   margin: 0;
+  box-sizing: initial;
 }
 
 html {
